--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
-
+      			<groupId>org.springframework.boot</groupId>
+      			<artifactId>spring-boot-starter-web</artifactId>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
